--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
 }
 
 .topnav a{
-  padding: 12px;
+  font-family: Public Sans;
+  padding: 20px;
   font-size: 16px;
   width: 33.33%;
   text-transform: uppercase;
@@ -20,7 +21,8 @@
 }
 
 h1 {
-padding: 60px;
+font-family: Muli;
+padding: 80px;
 font-size: 52px;
 font-weight: bold;
 letter-spacing: 0.05em;
@@ -34,20 +36,24 @@ body {
 }
 
 p{
-  font-size: 1.6em;
+font-family: Public Sans;
+  font-size: 1rem;
   line-height: 125%;
   margin-top: .5rem;
 }
 
 h2 {
-  font-size: 52px;
+  font-family: Muli;
   font-weight: semibold;
+  font-size: 42px;
+  padding-left: 80px;
   letter-spacing: 0.05em;
   text-transform: uppercase;
   line-height: 150%;
 }
 
 h3 {
+  font-family: Muli;
   font-size: 32px;
   text-transform: uppercase;
   letter-spacing: 0.04em;
@@ -68,6 +74,7 @@ html {
 }
 
 section {
+  margin: 1%;
   background-color: #F3F5EF
   color: black;
   height: 20rem;
@@ -100,7 +107,24 @@ section.topnav {
 
 footer{
   background-color: yellow;
+
+}
+
+.footer a {
+  font-family: Public Sans;
+  font-size: 16px;
+  text-decoration: none;
   padding-left: 80px;
+}
+
+hr {
+  display: block;
+  color: #ffffff;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  border-style: inset;
+  border-width: 1px;
+
 }
 
 @media screen and (min-width: 1000px) {
