--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ h1 {
 font-family: Muli;
 padding: 24px;
 font-size: 52px;
-font-weight: bold;
+font-weight: 700;
 letter-spacing: 0.05em;
 text-transform: uppercase;
 line-height: 150%;
@@ -64,7 +64,7 @@ font-family: Public Sans;
 
 h2 {
   font-family: Muli;
-  font-weight: semibold;
+  font-weight: 600;
   font-size: 42px;
   padding-left: 80px;
   letter-spacing: 0.05em;
