--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@
   text-decoration: none;
 }
 
+
 *{
   box-sizing: border-box;
 }
@@ -97,6 +98,13 @@ section {
 /*float: left;*/
 margin: 1%;
   width: 100%;
+}
+
+a {
+  font-family: Public Sans;
+  line-height: 150%;
+  text-decoration: underline;
+  color: black;
 }
 
 /*Homepage*/
@@ -253,6 +261,7 @@ section.billow-banner {
   flex-direction; row;
   align-items: center;
   justify-content: space-around;
+   border-bottom: 1px solid black;
 }
 
 .p1-container {
@@ -270,6 +279,7 @@ section.solution {
  display: flex;
  flex-direction: column;
  justify-content: center;
+ border-bottom: 1px solid black;
 }
 
 .solution h2 {
@@ -285,7 +295,7 @@ padding: 20px;
 .solution-p {
   font-family: Public Sans;
   line-height: 150%;
-  text-align: center;
+  text-align: left;
   padding-left: 350px;
   padding-right:350px;
 }
@@ -297,36 +307,83 @@ padding: 20px;
 .ur1 {
   width: 580px;
   display: flex;
-  flex-direction: column;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.user-research {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 60px;
+  border-bottom: 1px solid black;
 }
 
 .user-research img {
   display: flex;
-  flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
 }
 
-.up-container {
-width: 630px;
+.user-research p {
+  padding-right: 30px;
+}
+
+img.insights {
+  display: flex;
+    flex-direction: row;
+    justify-content: right;
+}
+
+section.user-personas {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+section.user-personas h2 {
+  align-self: center;
+}
+
+section.user-personas p {
+  align-self: center;
+  width: 647px;
+}
+
+section.up-2 {
+  display: flex;
+  flex-direction: row;
+  justify-content:  center;
+  border-bottom: 1px solid black;
+  padding:60px;
 }
 
 .mariap-container {
-width: 379px;
+width: 380px;
 }
 
-.luisr-container {
-  width: 379px;
-}
-
-section.result {
-  width: 813px;
+.luisr {
+width: 380px;
+  margin-left:175px;
 }
 
 section.ia {
-  padding-left: 350px;
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+align-items: center;
 }
 
 section.ia p {
-width: 530px;
+width: 536px;
+}
+
+section.table{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+
 }
 
 table {
@@ -334,6 +391,11 @@ table {
   line-height: 150%;
   margin: 40px;
   border-color: black;
+  height: 228px;
+}
+
+.table img {
+  width: 600px;
 }
 
 table, th, td {
@@ -353,7 +415,7 @@ section.wireframes {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 66px 123px 20px 177px;
+  padding: 60px;
 }
 
 .wf-container {
@@ -364,17 +426,34 @@ section.wireframes {
   padding: 20px;
 }
 
-.wireframes p {
+.wf-2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 752px;
+  font-family:
+  padding: 20px;
+}
 
+.wf-container img {
+  padding: 10px;
+}
+
+
+
+section.result {
+  width: 813px;
 }
 
 section.ca-section {
   background-color: #CED0CA;
   width: 100%;
+  padding:40px;
   margin: 0px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  border-bottom: 1px solid black;
 }
 
 .ca-section p {
@@ -394,21 +473,64 @@ padding: 20px;
   flex-direction: row;
   justify-content: center;
   padding: 30px;
+}
+
+.competitors img {
+  padding:20px;
+  margin: 30px;
+}
+
+section.wireframes {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+section.wireframes a {
+  align-self: flex-start;
+}
+
+.wf-2 p {
+  width: 752px;
 
 }
+
+.ut-1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #CED0CA;
+  margin: 0px;
+  padding: 40px 378px 40px 328px;
+  border-bottom: 1px solid black;
+}
+
+.brand-1 {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   align-content: center;
+   padding:60px 125px 60px 155px ;
+ }
+
+ .brand-1 p {
+   width: 1100px;
+ }
+
+ .bp-right{
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+ }
+
+
+
 .ut-section {
   background-color: #CED0CA;
   margin: 0px;
   padding: 150px 320px;
-}
-
-.ut-1 {
-  background-color: #CED0CA;
-  margin: 0px;
-  padding: 46px 378px 73px 328px;
-display: flex;
-flex-direction: column;
-justify-content: flex-start;
 }
 
 
@@ -484,20 +606,23 @@ padding: 20px;
 }
 
 /*Contact*/
+
+.contact-cta {
+  display:flex;
+  flex-direction: row;
+}
 .contact-cta p {
   width: 437px;
 }
-.contact-container {
+/*.contact-container {
 width: 1440px;
 height: 716px;
 top: 240px;
-}
+}*/
 
 section.contact-cta {
   padding-top: 136px;
   width:1318px;
-  display: block;
-  float: left;
 }
 
 section.contact-cta {
@@ -513,6 +638,7 @@ display: flex;
 flex-direction: column;
 float: right;
 padding-bottom: 150px;
+
 
 }
 
